add project presentation and report

--- a/public/index.html
+++ b/public/index.html
@@ -539,35 +539,39 @@
 
             <!-- Project Five -->
             <div id="terrestrial_hydrology_viz" class="row">
-              <div class="col-md-7">
-                <div class="programming">
-                  <img src="./images/lb-d3.png">
-                  <img src="./images/pl-php.png">
-                  <img src="./images/pl-js.png">
-                  <img src="./images/lb-jquery.gif">
-                  <img src="./images/pl-css-html.png">
-                  <img src="./images/fw-boostrap.png">
-                </div>
-                <br>
-                <a href="#">
-                    <img class="img-responsive" src="./images/web-terrestrial.jpg" alt="">
-                </a>
-              </div>
-              <div class="col-md-5">
-                  <h3><img src="./images/logo-ccny.jpg" alt="" style="width:45px">&nbsp;Terrestrial Hydrology Viz</h3>
-                  <h4><i>Data Visualization Coursework</i></h4>                                                   
-                  <!-- <h4>Subheading</h4> -->
-                  <ul>
-                    <li>Applied scikit-learn Machine Learning tool in Python to find the data pattern of climate change indicators</li>
-                    <li>Produced interactive visualization web application of the clusters map with JavaScript D3 library </li>
-                  </ul>
-                  <div class="btn-group">
-                    <a class="btn" href="https://github.com/susanjiang03/Terrestrial_Hydrology_Visualization" target="_blank" >
-                      <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
-                    </a>
-                    <a class="btn btn-primary" href="https://terrestrial-hydrology-viz.herokuapp.com">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(compatible in Safari)
+                <div class="col-md-7">
+                  <div class="programming">
+                    <img src="./images/lb-d3.png">
+                    <img src="./images/pl-php.png">
+                    <img src="./images/pl-js.png">
+                    <img src="./images/lb-jquery.gif">
+                    <img src="./images/pl-css-html.png">
+                    <img src="./images/fw-boostrap.png">
                   </div>
-              </div>
+                  <br>
+                  <a href="#">
+                      <img class="img-responsive" src="./images/web-terrestrial.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-md-5">
+                    <h3><img src="./images/logo-ccny.jpg" alt="" style="width:45px">&nbsp;Terrestrial Hydrology Viz</h3>
+                    <h4><i>Data Visualization Coursework</i></h4>                                                   
+                    <!-- <h4>Subheading</h4> -->
+                    <ul>
+                      <li>Applied scikit-learn Machine Learning tool in Python to find the data pattern of climate change indicators</li>
+                      <li>Produced interactive visualization web application of the clusters map with JavaScript D3 library </li>
+                    </ul>
+                    <div class="btn-group">
+                      <a class="btn" href="https://github.com/susanjiang03/Terrestrial_Hydrology_Visualization" target="_blank" >
+                        <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                      </a>
+                      <a class="btn btn-primary" href="https://terrestrial-hydrology-viz.herokuapp.com">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(compatible in Safari)
+                    </div>
+                </div>
+                <h2 class="text-primary">Project Presentation</h2>
+                <object data="/data/presentation_terrestrial-hydrology-viz.pdf" type="application/pdf" width="100%" height="100%"></object>
+                <h2 class="text-primary">Project Report</h2>
+                <object data="/data/report_terrestrial-hydrology-viz.pdf" type="application/pdf" width="100%" height="100%"></object>
             </div>
             <hr class="style10" >
 
