--- a/public/index.html
+++ b/public/index.html
@@ -318,6 +318,8 @@
                    <a class="btn btn-primary disabled" href="" target="_blank">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                 </div>
               </div>
+                <h2 class="text-primary">Project Presentation</h2>
+                <object data="/data/report-BuildMe.pdf" type="application/pdf" width="100%" height="80%"></object>
             </div>
               <!-- /.row -->
             <hr class="style10" >
@@ -452,6 +454,13 @@
                     </a>
                   </div> -->
               </div>
+              <!-- report -->
+              <div class="col-md-12 text-primary">
+                  <h2>MC Test Report Visualization</h2>
+                  <div style="height:120vh;overflow: scroll;">
+                    <img class="img-responsive" src="./images/mc10-report.jpg" alt="Report of MC Test">
+                  </div>
+              </div>
             </div>
             <!-- /.row -->
             <hr class="style10" >
@@ -477,7 +486,6 @@
                     <iframe src="https://www.youtube.com/embed/DRcTI5-Kknw?ecver=2&autoplay=1&loop=1" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
                   </div>
                   <br>
-   
                 </div>
                 <div class="col-md-5">
                   <h3><img src="./images/logo-mta.jpg" alt="" style="width:45px">&nbsp;True or False</h3>
@@ -494,9 +502,11 @@
                     </a>
                   </div> -->
                 </div>
-                <div class="col-md-12 text-center">
+                <div class="col-md-12 text-primary">
                     <h2>State Diagram of True or False Test</h2>
-                    <img class="img-responsive" src="./images/testTFDiagram.png" alt="State Diagram of True or False">
+                    <div style="height:80vh;overflow: scroll;">
+                      <img class="img-responsive" src="./images/testTFDiagram.png" alt="State Diagram of True or False">
+                    </div>
                 </div>
             </div>
               <!-- /.row -->
@@ -569,9 +579,9 @@
                     </div>
                 </div>
                 <h2 class="text-primary">Project Presentation</h2>
-                <object data="/data/presentation_terrestrial-hydrology-viz.pdf" type="application/pdf" width="100%" height="100%"></object>
+                <object data="/data/presentation_terrestrial-hydrology-viz.pdf" type="application/pdf" width="100%" height="80%"></object>
                 <h2 class="text-primary">Project Report</h2>
-                <object data="/data/report_terrestrial-hydrology-viz.pdf" type="application/pdf" width="100%" height="100%"></object>
+                <object data="/data/report_terrestrial-hydrology-viz.pdf" type="application/pdf" width="100%" height="120%"></object>
             </div>
             <hr class="style10" >
 
@@ -585,11 +595,45 @@
                   <img src="./images/pl-js.png">
                   <img src="./images/pl-css-html.png">
                   <img src="./images/fw-boostrap.png">
+                  <img src="./images/tp-handlebars.png">
                 </div>
                 <br>
-                <a href="">
-                    <img class="img-responsive" src="./images/web-pipeline.jpg" alt="">
-                </a>
+                <div id="carouselPM" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselPM" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselPM" data-slide-to="1"></li>
+                      <li data-target="#carouselPM" data-slide-to="2"></li>
+                      <li data-target="#carouselPM" data-slide-to="3"></li>
+
+                    </ol>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+
+                      <div class="item active">
+                        <img src="./images/slide-pipeline-0.jpg">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/slide-pipeline-1.jpg">
+                      </div>
+                      <div class="item">
+                        <img src="./images/web-pipeline.jpg">
+                      </div>
+                      <div class="item">
+                        <img src="./images/slide-pipeline-2.jpg">
+                      </div>
+                    </div>
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#carouselBuilme" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carouselBuilme" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                </div>
               </div>
               <div class="col-md-5">
                 <h3>
@@ -608,6 +652,12 @@
                   <a class="btn btn-primary disabled" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                 </div>
               </div>
+              <h2 class="col-lg-12 text-primary">Project Presentation 1</h2>
+              <object data="/data/report-PipelineMonitor-12-03-2015.pdf" type="application/pdf" width="100%" height="80%">
+              </object>
+              <h2 class="text-primary">Project Presentation 2</h2>
+              <object data="/data/report-PipelineMonitor-12-10-2015.pdf" type="application/pdf" width="100%" height="80%">
+              </object>
             </div>
             <hr class="style10" >
 
@@ -647,7 +697,7 @@
             </div>
             <div id="resume">
               <h1 class="text-center">RESUME</h1>
-              <object data="/data/Resume_Susan_Jiang_03242017.pdf" type="application/pdf" width="100%" height="100%"></object>
+              <object data="/data/Resume_Susan_Jiang_03242017.pdf" type="application/pdf" width="100%" height="150%"></object>
             </div>
             <div id="coverletter">
               <h1 class="text-center">COVER LETTER</h1>
