--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="#about">Me</a></li>
+            <li><a href="#aboutme">ABOUT ME</a></li>
             <li class="active"><a class="navbar-brand" href="#summary">SUMMARY</a></li>
             <li><a href="#skills">SKILLS</a></li>
             <li class="dropdown">
@@ -69,7 +69,7 @@
             <li><a href="#affliations">AFFILIATIONS</a></li>
             <li><a href="#resume">RESUME</a></li>
             <li><a href="#coverletter">COVER LETTER</a></li>
-            <li><a href="#more">MORE ABOUT ME</a></li>
+            <li><a href="#funfacts">FUN FACTS ABOUT ME</a></li>
           </ul>
         </div>
       </div>
@@ -97,15 +97,15 @@
         <div id="aboutme" class="col-lg-3 text-center" style="padding:0">
           <div class="panel col-lg-12" style="padding:0;"">
             <div class="row btn-group ">
-              <a href="https://www.cuny.edu" class="btn btn-default col-sm-4" target="_blank">
-                <img src="../images/cuny.jpg" style="height:50px">
+              <a href="https://www.cuny.edu" class="btn btn-default col-xs-3 col-sm-3 col-lg-4 col-md-4" target="_blank">
+                <img src="../images/cuny.jpg" style="width:100%">
               </a>
-              <a href="https://cunytechprep.nyc" class="btn btn-default col-sm-4" target="_blank">
-                <img src="../images/ctp.jpg" style="height:50px">
+              <a href="https://cunytechprep.nyc" class="btn btn-default col-xs-3 col-sm-3 col-lg-4 col-md-4" target="_blank">
+                <img src="../images/ctp.jpg" style="width:100%">
               </a>
 
-              <a href="http://www.techtalentpipeline.nyc/" class="btn btn-default col-sm-4" target="_blank">
-                <img src="../images/nycttp.jpg" style="height:50px">
+              <a href="http://www.techtalentpipeline.nyc/" class="btn btn-default col-xs-3 col-sm-3 col-md-4 col-lg-4" target="_blank">
+                <img src="../images/nycttp.jpg" style="width:100%">
               </a>
             </div>
             <div class="text-center">
@@ -163,19 +163,8 @@
                 <div id="barchartApplication"></div>
               </div>
               <hr>
-              <div id="more">
-                <h2 class="text-center">MORE ABOUT ME</h2>
-                  <div class="text-left">
-                   Goals:
-                  <br>
-                  Idols
-                  <br>
-                  Readings: 
-                  <br>
-                  Hobbies:
-                  </div>
-              </div>
-              <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="susanjiang03">
+              <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="susanjiang03"
+              style="position: absolute;bottom: 0;">
                     <a class="LI-simple-link" href='https://www.linkedin.com/in/susanjiang03?trk=profile-badge'>Susan Jiang</a>
                </div>
            </div>
@@ -618,10 +607,10 @@
                         <img src="./images/slide-pipeline-1.jpg">
                       </div>
                       <div class="item">
-                        <img src="./images/web-pipeline.jpg">
+                        <img src="./images/slide-pipeline-3.jpg">
                       </div>
                       <div class="item">
-                        <img src="./images/slide-pipeline-2.jpg">
+                        <img src="./images/slide-pipeline-4.jpg">
                       </div>
                     </div>
                     <!-- Left and right controls -->
@@ -693,16 +682,34 @@
             <!-- /.row -->
             <hr>
             <div id="timeline">
-              <h1 class="text-center"><a href="timeline.html"><u>TIMELINE</u></a></h1>
+              <h1 class="text-center">
+                <a href="">
+                  <u>TIMELINE</u>
+                  <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                  <i class="fa fa-external-link" aria-hidden="true"></i>
+                </a>
+              </h1>
             </div>
             <div id="resume">
               <h1 class="text-center">RESUME</h1>
-              <object data="/data/Resume_Susan_Jiang_03242017.pdf" type="application/pdf" width="100%" height="150%"></object>
+              <object data="/data/Resume_Susan_Jiang.pdf" type="application/pdf" width="100%" height="150%"></object>
             </div>
             <div id="coverletter">
               <h1 class="text-center">COVER LETTER</h1>
              <!--  <object data="/data/Coverletter_Susan_Jiang_03242017.pdf" type="application/pdf" width="100%" height="100%"></object> -->
-            </div>      
+            </div>   
+            <div id="funfacts">
+                <h2 class="text-center">FUN FACTS ABOUT ME</h2>
+                  <div class="text-left">
+                   Goals:
+                  <br>
+                  Idols
+                  <br>
+                  Readings: 
+                  <br>
+                  Hobbies:
+                  </div>
+            </div>   
         </div>
       </div>   <!-- /.row -->
     </div>
