--- a/public/index.html
+++ b/public/index.html
@@ -29,15 +29,21 @@
   <style>
   
 </style>
+<script>
+$(document).ready(function(){
+
+
+});
+</script>
 
   <body data-spy="scroll" data-target=".navbar" data-offset="20">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="margin-bottom: 10px">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -76,8 +82,7 @@
     </nav>
             <!-- /.container -->
     <!-- Page Content -->
-    <div class="container" style="margin-top:2vw;width:90%;">
-
+    <div id="#container" class="container" style="padding-top:3vh;width:90%;">
       <!-- Page Heading -->
       <div class="row">
           <div id="heading" class="col-lg-12">
@@ -95,8 +100,8 @@
       <div class="row">
         <!-- /.row -->
         <div id="aboutme" class="col-lg-3 text-center" style="padding:0">
-          <div class="panel col-lg-12" style="padding:0;"">
-            <div class="row btn-group ">
+          <div class="panel col-lg-12 text-center" style="padding:0;"">
+            <div class="row btn-group text-center">
               <a href="https://www.cuny.edu" class="btn btn-default col-xs-3 col-sm-3 col-lg-4 col-md-4" target="_blank">
                 <img src="../images/cuny.jpg" style="width:100%">
               </a>
