--- a/public/index.html
+++ b/public/index.html
@@ -85,18 +85,19 @@ $(document).ready(function(){
     <div id="#container" class="container" style="padding-top:3vh;width:90%;">
       <!-- Page Heading -->
       <div class="row">
-          <div id="heading" class="col-lg-12">
+          <div id="heading" style="background-image: url('../images/flat-earth-1.jpg');background-size: 100% 100%;
+    background-repeat: no-repeat;">
               <h1 class="page-header text-center">
-                <i style="font-size:2.5vw">Hello, World !</i><br>
+                <i style="font-size:10vh">Hello, World !</i><br>
                   <!-- <small>Susan</small> -->
-                  <span style="font-size:3vw">
+                  <span style="font-size:8vh">
                   你<small>/nǐ/</small>好<small>/hǎo/</small>，
                   世<small>/shì/</small>界<small>/jiè/</small> ！
                   </span>
               </h1>
           </div>
       </div>
-
+      <br>
       <div class="row">
         <!-- /.row -->
         <div id="aboutme" class="col-lg-3 text-center" style="padding:0">
@@ -118,21 +119,21 @@ $(document).ready(function(){
             </div>
             <div class="text-center" >
               <h3><b>Susan Lingshan Jiang</b></h3>
-              <div class="btn" onClick="location.href='mailto:susanjiang03@gmail.com'" style="font-size:1.5vw">
+              <div class="btn" onClick="location.href='mailto:susanjiang03@gmail.com'" style="font-size:3vh">
                 <a><i class="fa fa-envelope" ></i>&nbsp;susanjiang03@gmail.com</a>
               </div>
               <h4><i class="fa fa-phone"></i>&nbsp;+1 (646) 247-0567</h4>
-              <div class="row btn-group">
-                <a class="btn" href="https://github.com/susanjiang03" target="_blank" style="font-size:2.5vw">
+              <div class="row btn-group" style="font-size:3vh">
+                <a class="btn" href="https://github.com/susanjiang03" target="_blank" style="font-size:3vh">
                   <i class="fa fa-github" aria-hidden="true"></i>
                 </a>
-                <a class="btn" href="https://www.linkedin.com/in/susanjiang03/" target="_blank" style="font-size:2.5vw">
+                <a class="btn" href="https://www.linkedin.com/in/susanjiang03/" target="_blank" style="font-size:3vh">
                   <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                 </a>
-                <a class="btn" href="https://twitter.com/susanjiang03" target="_blank" style="font-size:2.5vw">
+                <a class="btn" href="https://twitter.com/susanjiang03" target="_blank" style="font-size:3vh">
                   <i class="fa fa-twitter" aria-hidden="true"></i>
                 </a>
-                 <a class="btn" href="https://www.facebook.com/susanjiang03" target="_blank" style="font-size:2.5vw">
+                 <a class="btn" href="https://www.facebook.com/susanjiang03" target="_blank" style="font-size:3vh">
                   <i class="fa fa-facebook" aria-hidden="true"></i>
                 </a>
               </div>
@@ -167,11 +168,6 @@ $(document).ready(function(){
                 <h4>Application</h4>
                 <div id="barchartApplication"></div>
               </div>
-              <hr>
-              <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="susanjiang03"
-              style="position: absolute;bottom: 0;">
-                    <a class="LI-simple-link" href='https://www.linkedin.com/in/susanjiang03?trk=profile-badge'>Susan Jiang</a>
-               </div>
            </div>
           </div>
         </div>
@@ -304,10 +300,10 @@ $(document).ready(function(){
                 </ul>
                 <div class="btn-group">
                   <a class="btn" href="https://github.com/susanjiang03/BuildMe" target="_blank">
-                    <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                    <i class="fa fa-github" aria-hidden="true" style="font-size:2vh"></i>
                   </a>
                  <!--  <a class="btn" href="">
-                    <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vw"></i>
+                    <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vh"></i>
                   </a> -->
                    <a class="btn btn-primary disabled" href="" target="_blank">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                 </div>
@@ -338,7 +334,7 @@ $(document).ready(function(){
                   <p></p>
                   <div class="btn-group">
                     <!-- <a class="btn" href="https://github.com/susanjiang03/">
-                      <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                      <i class="fa fa-github" aria-hidden="true" style="font-size:2vh"></i>
                     </a> -->
                     <a class="btn btn-primary" href="visualCode.html" target="_blank">View <i class="fa fa-external-link" aria-hidden="true"></i></a>
                   </div>
@@ -444,7 +440,7 @@ $(document).ready(function(){
                   </ul>
                <!--    <div class="btn-group">
                     <a class="btn" href="">
-                      <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vw"></i>
+                      <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vh"></i>
                     </a>
                   </div> -->
               </div>
@@ -492,7 +488,7 @@ $(document).ready(function(){
                   </ul>
                  <!--  <div class="btn-group">
                     <a class="btn" href="https://www.youtube.com/watch?v=DRcTI5-Kknw&feature=youtu.be">
-                      <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vw"></i>
+                      <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vh"></i>
                     </a>
                   </div> -->
                 </div>
@@ -532,7 +528,7 @@ $(document).ready(function(){
                 <p></p>
                 <div class="btn-group">
                   <a class="btn" href="https://github.com/susanjiang03/dreamgo" target="_blank">
-                    <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                    <i class="fa fa-github" aria-hidden="true" style="font-size:2vh"></i>
                   </a>
                   <a class="btn btn-primary" href="http://www.marketingunbox.com">View <i class="fa fa-external-link" target="_blank" aria-hidden="true"></i></a>
                 </div>
@@ -567,7 +563,7 @@ $(document).ready(function(){
                     </ul>
                     <div class="btn-group">
                       <a class="btn" href="https://github.com/susanjiang03/Terrestrial_Hydrology_Visualization" target="_blank" >
-                        <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                        <i class="fa fa-github" aria-hidden="true" style="font-size:2vh"></i>
                       </a>
                       <a class="btn btn-primary" href="https://terrestrial-hydrology-viz.herokuapp.com">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(compatible in Safari)
                     </div>
@@ -641,7 +637,7 @@ $(document).ready(function(){
                   <li>Implemented a pipeline monitor to monitor the process of generating data and a dashboard to visualize the result</li>
                 </ul>
                 <div class="btn-group">
-                  <a class="btn" href="https://github.com/susanjiang03/pipeline_monitor"><i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                  <a class="btn" href="https://github.com/susanjiang03/pipeline_monitor"><i class="fa fa-github" aria-hidden="true" style="font-size:2vh"></i>
                   </a>
                   <a class="btn btn-primary disabled" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                 </div>
@@ -663,7 +659,7 @@ $(document).ready(function(){
                   <img src="./images/pl-sql.png">
                 </div>
                 <br>
-                <a href="" class="btn" style="font-size:3vw;height:300px">
+                <a href="" class="btn" style="font-size:3vh;height:300px">
                   <!-- <img  alt=""> -->
                   E-Book Sharing System
                 </a>
@@ -677,7 +673,7 @@ $(document).ready(function(){
                   <li>Implemented a pipeline monitor to monitor the process of generating data and a dashboard to visualize the result</li>
                 </ul>
                 <div class="btn-group">
-                  <a class="btn" href="https://github.com/susanjiang03/EbookSharing" target="_blank" ><i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                  <a class="btn" href="https://github.com/susanjiang03/EbookSharing" target="_blank" ><i class="fa fa-github" aria-hidden="true" style="font-size:2vh"></i>
                   </a>
                   <a class="btn btn-primary disabled" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                 </div>
@@ -706,13 +702,18 @@ $(document).ready(function(){
             <div id="funfacts">
                 <h2 class="text-center">FUN FACTS ABOUT ME</h2>
                   <div class="text-left">
-                   Goals:
-                  <br>
-                  Idols
-                  <br>
-                  Readings: 
-                  <br>
-                  Hobbies:
+                  <h3>Favorite Quote: </h3>
+                    <blockquote>Imagine there are two worlds, one world with you, one world without you, maximize the differences between the two worlds, maximize your influence, this is the meaning of your life.</blockquote>
+                    <cite>
+                      by a philosophy professor from Columbia University, 
+                      in <a href="https://en.wikipedia.org/wiki/Kai-Fu_Lee" target="_blank">Kai-Fu Lee</a>'s official autobiography, 
+                      <i><a href="http://english.sina.com/business/p/2011/1031/409969.html" target="_blank">Making a World of Difference</a></i> 
+                    </cite>
+                  <!-- <br> -->
+                  <h3>Goals:</h3>
+                  <h3>Idols :</h3> 
+                  <h3>Readings: </h3>
+                  <h3>Hobbies:</h3>
                   </div>
             </div>   
         </div>
@@ -721,16 +722,23 @@ $(document).ready(function(){
             <hr>
 
             <!-- Footer -->
-            <footer>
-                <div class="container">
-                    <div class="col-lg-12">
-                        <p>Copyright © Susan Jiang 2017</p>
-                    </div>
-                </div>
-                <!-- /.row -->
-            </footer>
-
+    <footer>
+        <div class="container">
+            <div class="col-lg-12">
+                <p>Copyright © Susan Jiang 2017</p>
+            </div>
+            <div class="LI-profile-badge text-center"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="susanjiang03">
+              <a class="LI-simple-link" href='https://www.linkedin.com/in/susanjiang03?trk=profile-badge'>Susan Jiang</a>
+            </div>
         </div>
+        <br>
+        <div class="col-lg-12">
+              <img src='../images/mandela.jpg' style="width:100%">
+        </div>
+          <!-- /.row -->
+    </footer>
+
+    </div>
         <!-- /.container -->
 
         <!-- jQuery -->
