--- a/public/index.html
+++ b/public/index.html
@@ -309,7 +309,7 @@ $(document).ready(function(){
                 </div>
               </div>
                 <h2 class="text-primary">Project Presentation</h2>
-                <object data="/data/report-BuildMe.pdf" type="application/pdf" width="100%" height="80%"></object>
+                <object data="/data/Report-BuildMe.pdf" type="application/pdf" width="100%" height="80%"></object>
             </div>
               <!-- /.row -->
             <hr class="style10" >
@@ -643,10 +643,10 @@ $(document).ready(function(){
                 </div>
               </div>
               <h2 class="col-lg-12 text-primary">Project Presentation 1</h2>
-              <object data="/data/report-PipelineMonitor-12-03-2015.pdf" type="application/pdf" width="100%" height="80%">
+              <object data="/data/Report-PipelineMonitor-12-03-2015.pdf" type="application/pdf" width="100%" height="80%">
               </object>
               <h2 class="text-primary">Project Presentation 2</h2>
-              <object data="/data/report-PipelineMonitor-12-10-2015.pdf" type="application/pdf" width="100%" height="80%">
+              <object data="/data/Report-PipelineMonitor-12-10-2015.pdf" type="application/pdf" width="100%" height="80%">
               </object>
             </div>
             <hr class="style10" >
