--- a/public/index.html
+++ b/public/index.html
@@ -710,10 +710,99 @@ $(document).ready(function(){
                       <i><a href="http://english.sina.com/business/p/2011/1031/409969.html" target="_blank">Making a World of Difference</a></i> 
                     </cite>
                   <!-- <br> -->
-                  <h3>Goals:</h3>
+                  <h3>Favorite Movies:</h3>
+                  <div>
+                    <img src="../images/movie-shawshank-redemption.jpg" style="height:25vh">
+                  </div>
                   <h3>Idols :</h3> 
-                  <h3>Readings: </h3>
-                  <h3>Hobbies:</h3>
+                  <div>
+                    <a href="https://en.wikipedia.org/wiki/Nelson_Mandela" class="btn btn-primary" target="_blank" style="margin:1%">
+                      <img src="../images/mandela-enemies-quote.png" style="height:30vh" >
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/Mahatma_Gandhi" class="btn btn-primary" target="_blank" style="margin:1%">
+                      <img src="../images/idol-gandhi.jpg" style="height:30vh">
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/Steve_Jobs" class="btn btn-primary" target="_blank" style="margin:1%">
+                      <img src="../images/idol-steve-jobs.jpg" style="height:30vh">
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/Jack_Ma" class="btn btn-primary" target="_blank" style="margin:1%">
+                      <img src="../images/quotes-Jack-Ma.jpg" style="height:30vh">
+                    </a>
+                  </div>
+                  <div>
+                    <h3>Readings: </h3>
+                    <a href="https://en.wikipedia.org/wiki/The_World_Is_Flat" class="btn btn-success" target="_blank" style="margin:1%">
+                        <img src="../images/reading-world-flat.jpeg" style="height:22vh">
+                    </a>
+                    <a href="http://www.biography.com/people/steve-jobs-9354805" class="btn btn-success" target="_blank" style="margin:1%">
+                        <img src="../images/reading-steve-jobs.jpg" style="height:22vh">
+                    </a>
+                    <a href="http://english.sina.com/business/p/2011/1031/409969.html" class="btn btn-success" target="_blank" style="margin:1%">
+                        <img src="../images/reading-kaifu.jpg" style="height:20vh">
+                        <br>
+                        Making A World of Difference
+                    </a>
+                    <a href="https://www.amazon.com/Best-You-That-Can-Chinese/dp/7010051240" class="btn btn-success" target="_blank" style="margin:1%">
+                        <img src="../images/reading-kaifu-2.jpg" style="height:20vh" alt="Be The Best You That You Can Be">
+                       <br> Be The Best You  That You Can Be
+                    </a>
+                  </div>
+                  <div class="">
+                    <div class="col-lg-6">
+                    <h3>Favorite Sport</h3>
+                       <div>
+                        <img src="../images/basketball.ico" style="height:10vh">
+                        <img src="../images/nba-logo.ico" style="height:10vh">
+                      </div>
+                    </div>
+                    <div class="col-lg-6">
+                      <h3>Hobbies: </h3>
+                      <div>
+                        <img src="../images/painting.jpg" style="height:10vh">
+                      </div>
+                    </div>
+                  </div>
+
+                  <h3>My Dreams: </h3>
+                  <div>
+                    <h4>&nbsp;&nbsp; When I was 10, I wanted to be a scientist to discover new technlogy to beat cancers.
+                    <br>
+                    &nbsp;&nbsp; When I was 18, I wanted to be a doctor to save more people's life. 
+                    <br>
+                     &nbsp;&nbsp; When I was 19, I wanted to be an entrepreneur to help people with money.
+                    <br>
+                    &nbsp;&nbsp; When I was 21, I decided to be a software engineer to develop great apps that can benefit millions of people.
+                    <br>
+                    <span class="text-primary">
+                    &nbsp;&nbsp; My ultimate dream has never been changed. I wish I had an influence in making the world a better place to live. I want to help people who are in proverty, in hunger, and in uneducated. 
+                    <br>
+                    &nbsp;&nbsp; Right now, I strongly believe I can use my code to accomplish my dream one day. I have a great interest in EdTech. I want to help children to find pleasure in science study and grow up to become any people they want to be.
+                    </span>
+                    </h4>
+                  </div>
+
+<!--                   When I was 10, I wanted to be
+A Lawyer- 1 year of law school changed my mind about that quickly.
+Books I would suggest to a friend
+The Unbearable Lightness of Being - Milan Kundera
+Favorite Pastime
+Watching the Kings hoist the Stanley Cup....oh, wait. That hasn't happened yet. I guess I can keep dreaming of that day.....
+Favorite Sports Team (don't hold it against me!!)
+LA Kings & the UCLA Bruins :-)
+Favorite Movies
+Goodfellas
+Favorite Band or Songs
+Beach House, Radiohead, Bon Iver, Band of Horses, Dylan, J5, Monsters of Folk, Black Keys, Grizzly Bear, Sam Cooke, the Stones, Beatles and much more!
+What I like to do when NOT recruiting
+Surf, travel, Volleyball, Hockey, Hiking, eating, biking and hang with good people....Bask in the glory of 2 Stanley Cup wins by the LA Kings! 
+Favorite Task
+Can't be a favorite anything if we call it a task ;-)
+Coolest job on the planet
+Mine, of course!
+Idea to make the world a better place
+ -->
+
+
                   </div>
             </div>   
         </div>
@@ -724,7 +813,7 @@ $(document).ready(function(){
             <!-- Footer -->
     <footer>
         <div class="container">
-            <div class="col-lg-12">
+            <div class="col-lg-12 text-center">
                 <p>Copyright © Susan Jiang 2017</p>
             </div>
             <div class="LI-profile-badge text-center"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="susanjiang03">
