--- a/public/index.html
+++ b/public/index.html
@@ -758,7 +758,7 @@ $(document).ready(function(){
                     <div class="col-lg-6">
                       <h3>Hobbies: </h3>
                       <div>
-                        <img src="../images/painting.jpg" style="height:10vh">
+                        <img src="../images/painting.JPG" style="height:10vh">
                       </div>
                     </div>
                   </div>
@@ -774,9 +774,10 @@ $(document).ready(function(){
                     &nbsp;&nbsp; When I was 21, I decided to be a software engineer to develop great apps that can benefit millions of people.
                     <br>
                     <span class="text-primary">
-                    &nbsp;&nbsp; My ultimate dream has never been changed. I wish I had an influence in making the world a better place to live. I want to help people who are in proverty, in hunger, and in uneducated. 
-                    <br>
-                    &nbsp;&nbsp; Right now, I strongly believe I can use my code to accomplish my dream one day. I have a great interest in EdTech. I want to help children to find pleasure in science study and grow up to become any people they want to be.
+                    &nbsp;&nbsp; However, my ultimate dream has never been changed. I wish I had an influence in making the world a better place to live. I want to help people who are in proverty, in hunger, and in uneducated. 
+                    &nbsp;&nbsp;<br>In college, I discovered myself enjoy implementing innovative features for users.
+                    <h3> Right now, I strongly believe I can use my code to accomplish my dreams one day. I have a great interest in EdTech. I want to help children to find pleasure in science study and grow up to become any people they want to be.
+                    </h3>
                     </span>
                     </h4>
                   </div>
