--- a/public/index.html
+++ b/public/index.html
@@ -747,7 +747,7 @@ $(document).ready(function(){
                        <br> Be The Best You  That You Can Be
                     </a>
                   </div>
-                  <div class="">
+                  <div class="row">
                     <div class="col-lg-6">
                     <h3>Favorite Sport</h3>
                        <div>
@@ -762,12 +762,12 @@ $(document).ready(function(){
                       </div>
                     </div>
                   </div>
-
+                  <hr>
                   <h3>My Dreams: </h3>
                   <div>
                     <h4>&nbsp;&nbsp; When I was 10, I wanted to be a scientist to discover new technlogy to beat cancers.
                     <br>
-                    &nbsp;&nbsp; When I was 18, I wanted to be a doctor to save more people's life. 
+                    &nbsp;&nbsp; When I was 18, I wanted to be a doctor to save more people's lives. 
                     <br>
                      &nbsp;&nbsp; When I was 19, I wanted to be an entrepreneur to help people with money.
                     <br>
@@ -775,7 +775,7 @@ $(document).ready(function(){
                     <br>
                     <span class="text-primary">
                     &nbsp;&nbsp; However, my ultimate dream has never been changed. I wish I had an influence in making the world a better place to live. I want to help people who are in proverty, in hunger, and in uneducated. 
-                    &nbsp;&nbsp;<br>In college, I discovered myself enjoy implementing innovative features for users.
+                    &nbsp;&nbsp;<br>In college, I discovered myself enjoy implementing innovative features for users. I am excited to use softwares to engineer a better society.
                     <h3> Right now, I strongly believe I can use my code to accomplish my dreams one day. I have a great interest in EdTech. I want to help children to find pleasure in science study and grow up to become any people they want to be.
                     </h3>
                     </span>
