--- a/public/index.html
+++ b/public/index.html
@@ -396,7 +396,7 @@ $(document).ready(function(){
                         </div>
 
                         <div class="item">
-                          <img src="./images/mc-5.PNG">
+                          <img src="./images/mc-5.png">
                         </div>
 
                         <div class="item">
