add google font

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <!-- linked in badge -->
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!-- [if lt IE 9]> -->
@@ -27,6 +29,9 @@
     <!-- <![endif] -->
   </head>
   <style>
+  #funfacts {
+    font-family: 'Indie Flower', cursive;
+  }
   
 </style>
 <script>
@@ -696,8 +701,8 @@ $(document).ready(function(){
         <div class="text-left">
             <div style="margin:1%">
               <h3 class="col-lg-2 col-md-12 col-sm-12">Favorite Quote: </h3>
-              <div class="col-lg-10 col-md-12 col-sm-12">
-                  <blockquote>Imagine there are two worlds, one world with you, one world without you, maximize the differences between the two worlds, maximize your influence, this is the meaning of your life.</blockquote>
+              <div class="col-lg-10 col-md-12 col-sm-12" style='font-family: "Times New Roman", Times, serif;'>
+                  <blockquote >Imagine there are two worlds, one world with you, one world without you, maximize the differences between the two worlds, maximize your influence, this is the meaning of your life.</blockquote>
                   <cite>
                     by a philosophy professor from Columbia University, 
                     in <a href="https://en.wikipedia.org/wiki/Kai-Fu_Lee" target="_blank">Kai-Fu Lee</a>'s official autobiography, 
@@ -706,7 +711,7 @@ $(document).ready(function(){
               </div>
             </div>
 
-            <div>
+            <div style="margin:1%">
               <h3 class="col-lg-2 col-md-12 col-sm-12">Idols :</h3> 
               <div class="col-lg-10 col-md-12 col-sm-12">
                   <a href="https://en.wikipedia.org/wiki/Nelson_Mandela" class="btn btn-primary" target="_blank" style="margin:1%">
