--- a/public/index.html
+++ b/public/index.html
@@ -79,11 +79,10 @@ $(document).ready(function(){
               </div>
             </li>
             <li><a href="#timeline">TIMELINE</a></li>
+            <li><a href="#resume">RESUME</a></li>
             <!-- <li><a href="#affliations">AFFILIATIONS</a></li> -->
             <li><a href="#funfacts">FUN FACTS ABOUT ME</a></li>
-            <li><a href="#resume">RESUME</a></li>
             <!-- <li><a href="#coverletter">COVER LETTER</a></li> -->
-
           </ul>
         </div>
       </div>
@@ -681,20 +680,51 @@ $(document).ready(function(){
                   <a class="btn btn-primary disabled" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                 </div>
               </div>
+              <div class="col-lg-12" style="padding-bottom:5%">
+                <div>
+                  <h2>User Registration</h2>
+                  <img style="width:100%" src="./images/ebooksharing-1.gif">
+                </div>
+                <div>
+                  <h2>Super User Check Bad Words & Approve Books</h2>
+                  <img style="width:100%" src="./images/ebooksharing-2.gif">
+                </div>
+                <div>
+                  <h2>Register User Get Message of Approved Book</h2>
+                  <img style="width:100%" src="./images/ebooksharing-3.gif">
+                </div>
+                <div>
+                  <h2> Send invitation to friends' for sharing reading points</h2>
+                  <img style="width:100%" src="./images/ebooksharing-4.gif">
+                </div>
+                <div>
+                  <h2> Accept invitation</h2>
+                  <img style="width:100%" src="./images/ebooksharing-5.gif">
+                </div>
+              </div>
             </div>
           </div>
-        </div>
+      </div>
+    <hr>
             <!-- /.row -->
-          <hr>
-        <div id="timeline">
-          <h1 class="text-center">
-            <a href="">
-              <u>TIMELINE</u>
-              <i class="fa fa-bar-chart" aria-hidden="true"></i>
-              <i class="fa fa-external-link" aria-hidden="true"></i>
-            </a>
-          </h1>
-        </div>
+    <div id="timeline" style="margin-top:5%">
+      <h1 class="text-center">
+        <a href="">
+          <u>TIMELINE</u>
+          <i class="fa fa-bar-chart" aria-hidden="true"></i>
+          <i class="fa fa-external-link" aria-hidden="true"></i>
+        </a>
+      </h1>
+    </div>
+
+    <div id="resume">
+        <h1 class="text-center">RESUME</h1>
+        <object data="/data/Resume_Susan_Jiang.pdf" type="application/pdf" width="100%" height="150%"></object>
+    </div>
+    <div id="coverletter">
+        <!-- <h1 class="text-center">COVER LETTER</h1> -->
+       <!--  <object data="/data/Coverletter_Susan_Jiang_03242017.pdf" type="application/pdf" width="100%" height="100%"></object> -->
+    </div> 
             
     <div id="funfacts" class="container">
         <h1 class="text-center">FUN FACTS ABOUT ME</h1>
@@ -819,23 +849,11 @@ $(document).ready(function(){
             </div>
         </div>
     </div>
+  
 
-        <div id="resume">
-            <h1 class="text-center">RESUME</h1>
-            <object data="/data/Resume_Susan_Jiang.pdf" type="application/pdf" width="100%" height="150%"></object>
-        </div>
-        <div id="coverletter">
-            <!-- <h1 class="text-center">COVER LETTER</h1> -->
-           <!--  <object data="/data/Coverletter_Susan_Jiang_03242017.pdf" type="application/pdf" width="100%" height="100%"></object> -->
-        </div>   
-
-
-
-            </div>   
-        </div>
       </div>   <!-- /.row -->
     </div>
-            <hr>
+    <hr>
 
             <!-- Footer -->
     <footer>
