--- a/public/index.html
+++ b/public/index.html
@@ -683,23 +683,23 @@ $(document).ready(function(){
               <div class="col-lg-12" style="padding-bottom:5%">
                 <div>
                   <h2>User Registration</h2>
-                  <img style="width:100%" src="./images/ebooksharing-1.gif">
+                  <img style="width:100%" src="./images/ebookSharing-1.gif">
                 </div>
                 <div>
                   <h2>Super User Check Bad Words & Approve Books</h2>
-                  <img style="width:100%" src="./images/ebooksharing-2.gif">
+                  <img style="width:100%" src="./images/ebookSharing-2.gif">
                 </div>
                 <div>
                   <h2>Register User Get Message of Approved Book</h2>
-                  <img style="width:100%" src="./images/ebooksharing-3.gif">
+                  <img style="width:100%" src="./images/ebookSharing-3.gif">
                 </div>
                 <div>
                   <h2> Send invitation to friends' for sharing reading points</h2>
-                  <img style="width:100%" src="./images/ebooksharing-4.gif">
+                  <img style="width:100%" src="./images/ebookSharing-4.gif">
                 </div>
                 <div>
                   <h2> Accept invitation</h2>
-                  <img style="width:100%" src="./images/ebooksharing-5.gif">
+                  <img style="width:100%" src="./images/ebookSharing-5.gif">
                 </div>
               </div>
             </div>
