--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@ $(document).ready(function(){
             <li class="dropdown">
               <a class="btn dropbtn" href="#projects">PROJECTS &nbsp;<span class="caret"></span></a>
               <div class="dropdown-content" style="width:200%">
+                <a href="/tic-tac-toe/index.html">Tic Tac Toe</a>
                 <a href="#buildme">Build Me</a>
                 <a href="#visualcode">Visual Code</a>
                 <a href="#testMC">Multiple Choice Test</a>
@@ -216,6 +217,22 @@ $(document).ready(function(){
           <div id="projects" class="">
             <h2 class="text-center well">PROJECTS</h2>
             <br>
+            <div id="tic-tac-toe" class="row">
+                <div class="col-md-7">
+                   <div class="programming">
+                      <img src="./images/pl-js.png">
+                      <img src="./images/lb-jquery.gif">
+                      <img src="./images/fw-boostrap.png">
+                    </div>
+                  <br>
+                  <h1>Tic Tac Toe</h1>
+                </div>
+                <div class="col-md-5">
+                  
+                </div>
+            </div>
+
+            <hr class="style10" >
             <!-- Project One -->
             <div id="buildme" class="row">
               <div class="col-md-7">
