--- a/public/tic-tac-toe/index.html
+++ b/public/tic-tac-toe/index.html
@@ -9,7 +9,6 @@
     <title>Tic Tac Toe</title>
     <script src="../static/javascripts/jquery-1.12.4.min.js"></script>
     <script src="../static/javascripts/bootstrap.min.js"></script>
-	<script src="jq_tic_tac_toe.js"></script>
     <link rel="stylesheet" href="../static/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -25,7 +24,7 @@
   	}
   </style>
   <body>
-  	<div class="container well text-center" style="height:auto">
+  	<div class="container well text-center" style="height:100vh">
   		<div>
   			<button id="btnPlayersTwo" class="btn btn-default btn-lg pull-left"
   			role="tooltip" title="RESET : Player A vs. Player B  ( A start first )" data-placement="bottom" style="font-size:2.5vw;">
@@ -80,6 +79,7 @@
 
   		</div>
   	</div>
+	<script src="jq_tic_tac_toe.js"></script>
   </body>
   <hr>
   <footer>
